<resources>
    <string name="app_name" translatable="false">Infraprise</string>
    <string name="file_provider" translatable="false">com.nico60.infraprise.fileprovider</string>
    <string name="nro" translatable="false">NRO</string>
    <string name="pm" translatable="false">PM</string>
    <string name="sheet">%s SHEET</string>
    <string name="nro_number">NRO number :</string>
    <string name="pm_number">PM number :</string>
    <string name="aeop_number">AEOP number :</string>
    <string name="bt_number">BT number :</string>
    <string name="gspot_number">GSPOT number :</string>
    <string name="ft_be_number">Code FT BE number :</string>
    <string name="aeop_height">AEOP height :</string>
    <string name="aeop_height_pole_to_plant">Height of the pole to plant : %s meters</string>
    <string name="aeop_distance_pole_to_road">Distance from the pole to the side of the roadway : %s meter(s)</string>
    <string name="aeop_distance_to_road">Distance from the roadway :</string>
    <string name="address">Address :</string>
    <string name="aeop_warning">Enter a NRO, PM and AEOP number</string>
    <string name="bt_warning">Enter a NRO, PM and BT number</string>
    <string name="ft_warning">Enter a NRO, PM and GSPOT number</string>
    <string name="zip_warning">Empty folder(s) not added in the email !</string>
    <string name="folder_warning">Enter a folder name</string>
    <string name="sheet_list_toast">No sheet saved</string>
    <string name="create_sheet_toast">Sheet saved</string>
    <string name="update_sheet_toast">Sheet updated</string>
    <string name="rename_file_folder_warning">Enter a new name</string>
    <string name="perm_write_warning">Write external storage permission allows us to read and store files. Please allow this permission in App Settings.</string>
    <string name="perm_location_warning">Location permission allows us to get pole position. Please allow this permission in App Settings.</string>
    <string name="pole_location_warning">Pole location can\'t be established. Try another again.</string>
    <string name="aeop_survey_action">AEOP POLE SURVEY</string>
    <string name="bt_survey_action">BT POLE SURVEY</string>
    <string name="ft_survey_action">FT POLE SURVEY</string>
    <string name="open_file_action">OPEN A FILE</string>
    <string name="choose_action">CHOOSE AN ACTION</string>
    <string name="title_activity_aeop_survey">AEOP pole survey</string>
    <string name="title_activity_bt_survey">BT pole survey</string>
    <string name="title_activity_ft_survey">FT pole survey</string>
    <string name="title_activity_file_explorer">File explorer</string>
    <string name="take_picture">Picture</string>
    <string name="take_location">Get\nlocation</string>
    <string name="open_file">Open</string>
    <string name="delete_file">Delete</string>
    <string name="send_file">Send</string>
    <string name="modify_file">Modify</string>
    <string name="create_file_text">Create text file</string>
    <string name="select_all_items">Select all</string>
    <string name="deselect_all_items">Deselect all</string>
    <string name="new_folder_name">Create folder</string>
    <string name="create_folder_title">Create new folder</string>
    <string name="rename_title">Rename</string>
    <string name="copy_title">Copy</string>
    <string name="move_title">Move</string>
    <string name="directory_select_title">Select directory</string>
    <string name="file_text_saved">File %s %s</string>
    <string name="file_created">created</string>
    <string name="file_overwrited">overwrited</string>
    <string name="picture_saved">Picture saved</string>
    <string name="item_selected">\u0020 Selection(s)</string>
    <string name="db_sheet_list">Sheet list saved</string>
    <string name="select_sheet">Select a sheet</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="pole_latitude">Pole latitude :</string>
    <string name="pole_longitude">Pole longitude :</string>
    <string name="spec_title">Specification</string>
    <string name="loc_title">Location</string>
    <string name="loc_provider_settings">Settings</string>
    <string name="loc_provider_warning_title">WARNING</string>
    <string name="loc_provider_warning_message">Your device\’s GPS is off. Please activate it in the settings to get the location of the pole. Press the button again after activating the location.</string>
    <string name="loc_provider_info_title">INFORMATION</string>
    <string name="loc_provider_info_message">Position yourself next to the pole and press OK to get its precise location.</string>
    <string name="loc_provider_info_checkbox">Don\'t show this message again</string>
    <string name="loc_provider_info_search">Search location&#8230;</string>
    <string name="pole_view_title">Choose a view</string>
    <string name="pole_label_view">Label</string>
    <string name="pole_whole_view">Whole</string>
    <string name="pole_top_view">Top</string>
    <string name="pole_additional_view">Other</string>
    <string name="meter_string">meter(s)</string>
    <string name="meters_string">meters</string>
    <string name="delete_db_sheet">Delete %s sheet ?</string>
    <string name="exist_warning">Warning</string>
    <string name="file_exist_message">File %s already exist.\nDo you want to overwrite this file ?</string>
    <string name="sheet_exist_message">Sheet %s already exist.\nDo you want to overwrite this sheet ?</string>
</resources>
